--- a/src/PythonOnline/Properties/launchSettings.json
+++ b/src/PythonOnline/Properties/launchSettings.json
@@ -1,5 +1,20 @@
-﻿{
+{
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:2106/",
+      "sslPort": 0
+    }
+  },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "PythonOnline": {
       "commandName": "Project",
       "launchBrowser": true,
