--- a/src/PythonOnline/Properties/launchSettings.json
+++ b/src/PythonOnline/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-{
+﻿{
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": false, 
+    "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:2106/",
+      "applicationUrl": "http://localhost:25998",
       "sslPort": 0
     }
   },
@@ -18,7 +18,7 @@
     "PythonOnline": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
